fix overflow

--- a/global.css
+++ b/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Chango&family=Lato:wght@300;400;700;900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Patrick+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Patrick+Hand&display=swap');
 * {
   --brand-hue: 200;
   --brand-saturation: 100%;
@@ -136,11 +136,11 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   height: 100%;
   width: 100%;
   /* height: 100vh; */
-  /* width: 100vw; */
+  width: 100vw;
 }
 
 .border-one {
