--- a/projects.css
+++ b/projects.css
@@ -8,7 +8,7 @@ body {
   height: min-content;
   padding: 30px;
   margin: auto;
-  width: 700px;
+  max-width: 700px;
   display: flex;
   flex-direction: column;
 }
